--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
