--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
@@ -131,7 +131,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
@@ -147,7 +147,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Nombre de Usuario
                 </span>
               </a>
             </li>
@@ -167,7 +167,7 @@
           <div class="user">
             <p>
               <img src="src/images/covers/gorillaz.jpg" alt=""/>
-              <span>Leonidas Esteban</span>
+              <span>Nombre De Usuario</span>
             </p>
           </div>
         </div>
