--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="myPlaylist-item">
               <a href="#">
                 <span>
-                  Pa Bailar
+                  Bailar
                 </span>
               </a>
             </li>
@@ -57,21 +57,21 @@
             <li class="myPlaylist-item">
               <a href="#">
                 <span>
-                  Luis y sus amigos
+                  Amigos
                 </span>
               </a>
             </li>
             <li class="myPlaylist-item">
               <a href="#">
                 <span>
-                  Bailar y Bailar
+                  Otros
                 </span>
               </a>
             </li>
             <li class="myPlaylist-item">
               <a href="#">
                 <span>
-                  13 reasons why
+                  Soundtrack
                 </span>
               </a>
             </li>
@@ -91,7 +91,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
@@ -107,7 +107,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
@@ -123,7 +123,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
@@ -139,7 +139,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Nombre De Usuario
                 </span>
               </a>
             </li>
